# Hecos

./: .gitignore  AURA_RUN.bat  Aura_Run_Vulkan.bat  CONFIG_EDITOR_STANDALONE_RUN.bat  CONTRIBUTING.md  INSTALL_HECOS_LINUX.sh  INSTALL_HECOS_WIN.bat  INSTALL_SERVICE_LINUX.sh  INSTALL_SERVICE_WIN.bat  INSTALL_ZENTRA_LINUX.sh  LICENSE  PyWhatKit_DB.txt  README.md  README_ESP.md  README_ITA.md  RESTART_TRAY_ICON_LINUX.sh  START_HECOS_TRAY_LINUX.sh  START_HECOS_TRAY_WIN.bat  START_SETUP_HERE_LINUX.sh - collegamento.lnk  START_SETUP_HERE_WIN.bat - collegamento.lnk  START_ZENTRA_SILENT_WIN.vbs  START_ZENTRA_TRAY_WIN.bat  UNINSTALL_HECOS_LINUX.sh  UNINSTALL_HECOS_WIN.bat  UNINSTALL_SERVICE_LINUX.sh  UNINSTALL_SERVICE_WIN.bat  ZENTRA_CONSOLE_RUN_WIN.bat  ZENTRA_PROC_MANAGER.bat  ZENTRA_RUN.bat  ZENTRA_RUN_main.bat  ZENTRA_Run_Nvidia.bat  ZENTRA_Run_Vulkan.bat  ZENTRA_SETUP_CONSOLE_WIN.bat  ZENTRA_WEB_RUN.bat  ZENTRA_WEB_RUN_WIN.bat  aura_webui_bridge.py  build_image_gen.py  check.txt  check_db.py  check_disabled.py  (+104 more)
app/: __init__.py  application.py  bootstrapper.py  config.py  input_handler.py  model_manager.py  personality_manager.py  state_manager.py  threads.py
aura_bridge/: documentazione_tecnica_bridge.txt  integrazione webui.py
config/: audio.json
core/: cervello.py  config_editor.py  diagnostica.py  logger.py  media_config.py  plugin_loader.py  processore.py  registry.json  version.py
docs/: ARCHITECTURE_MAP.md  Domande.txt  GITHUB_WIKI.md  GUIDA_UNIFICATA_ITA.md  MANUALE OPERATIVO.docx  MANUALE_OPERATIVO.md  Mappa cartelle, file e struttura V0.9.3.txt  Mappa cartelle, file e struttura V0.9.4.txt  OPERATING_MANUAL.md  PLUGINS_DEV.md  TECHNICAL_GUIDE.md  UNIFIED_GUIDE_EN.md  WIKI_MAINTENANCE.md  _Sidebar.md  features.html  guida all'installazione.txt  index.html  installation_guide.md  installazione librerie python.txt  python_setup.md  zentra_core_structure_v0.9.6.md  zentra_core_structure_v0.9.7.md  ~$NUALE OPERATIVO.docx
docs_ai/: AI_INSTRUCTIONS.md  CAPABILITY_RULES.md  DEVELOPMENT_RULES.md  MASTER_CONTEXT.md
hecos/: __init__.py  build_all.py  check_db.py  check_db2.py  clean_json.py  dump_row.py  fix_manifests.py  git_log.txt  git_ls.txt  git_ls_cmd.txt  git_status.txt  git_status_2.txt  image_gen_row.json  main.py  manifest_dump.json  migrate_imports.py  migrate_imports_2.py  monitor.py  move_dirs.py  query  requirements.txt  scratch_fix_manifest.py  scratch_wa_test.py  setup_wizard.py  test_play.ps1
hecos_sdk/: setup.py
logs/: webui_heartbeat.json
memoria/: Spiegazioni.txt  archivio_chat.db  brain_interface.py  memoria.py  profilo_utente.json
memory/: archivio_chat.db  brain_interface.py  chat_history.db  lists.db-shm  lists.db-wal
personalita/: aura.txt  aura_dark.txt  aura_dark_Adult.txt  nova_tech.txt
plugins/: _domotica.py  _esecutore.py  (+1 more)
(+1484 files in other folders)
