[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "hecos-core"
version = "0.20.0"
description = "Helping Companion System"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "litellm",
    "babel",
    "holidays",
    "requests",
    "icalendar",
    "python-vlc",
    "dateparser",
    "apscheduler",
]

[project.optional-dependencies]
# Install with: pip install ".[service]"
service = [
    "pywin32; sys_platform=='win32'",
    "pystray",
    "pillow",
]

[project.scripts]
hecos-tray    = "hecos.tray.tray_app:run_tray"

[tool.setuptools.packages.find]
where = ["."]