[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "hecos-core"
version = "0.27.2"
description = "Helping Companion System"
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "tomli-w",
    "litellm",
    "tenacity",
    "babel",
    "holidays",
    "requests",
    "icalendar",
    "python-vlc",
    "dateparser",
    "apscheduler",
    "pyautogui",
    "pygetwindow",
    "pytesseract",
    "opencv-python",
    "pywinauto; sys_platform=='win32'",
    "playwright",
    "psutil",
    "flask",
    "flask-login",
    "flask-compress",
    "cryptography",
    "pynput",
    "SpeechRecognition",
    "PyAudio",
    "fastembed",
    "lancedb>=0.33.0",
    "sentence-transformers",
    "sounddevice",
    "pygame",
    "GPUtil",
    "numpy",
    "soundfile",
]

[project.optional-dependencies]
# Install with: pip install ".[service]"
service = [
    "pywin32; sys_platform=='win32'",
    "pystray",
    "pillow",
    "customtkinter",
    "qrcode",
]

[project.scripts]
hecos-tray    = "hecos.tray.tray_app:run_tray"

[tool.setuptools.packages.find]
where = ["."]